appId: ${APP_ID}
---
- launchApp:
    clearState: true

- assertVisible:
    id: "poster"

- extendedWaitUntil:
    notVisible:
      id: "poster"
    timeout: 5_000

- assertVisible:
    id: "pause"

- tapOn:
    id: "pause"
- extendedWaitUntil:
    visible:
      id: "play"
    timeout: 2_500

- tapOn:
    id: "play"
- extendedWaitUntil:
    visible:
      id: "pause"
    timeout: 2_500

- tapOn:
    id: "stop"
- extendedWaitUntil:
    visible:
      id: "play"
    timeout: 5_000

- assertVisible:
    id: "poster"
